tests/NormalTests/paczka1/fuzzy1/84588896.err
Error in line 2: zgmgY2Zs2 A573 51,3
Error in line 17: gsib4 A573 -1,6
Error in line 12: DSb A573 61,2
Error in line 6: D3TERQABW A114 16,1
Error in line 22: DSb A794 14,1
Error in line 30: DSb A823 -1,2
Error in line 14: gsib4 A573 18,3
Error in line 29: DSb A823 82,0
Error in line 33: XNOqQ8 A573 65,7
